# NoizuPromptLingo

./: .aider.conf.yml  .envrc  .gitignore  .gitmodules  .mise.toml  AGENT.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  RESUME.md  collate.py  debug-command.sh  docker-compose.yaml  fixed.prompt.chain.md  mise.toml  npl-tmp.md  npl.md  package-lock.json  prompt.chain.md  pyproject.toml
.claude/: .gitignore
.npl/: .gitignore
agentic/: INSTRUCTIONS.md
agents/: idea-to-spec.md  nimps.md  npl-build-master.md  npl-grader.md  npl-idea-to-spec.md  npl-perf-profiler.md  npl-persona-manager.md  npl-persona.md  npl-prd-editor.md  npl-prd-manager.md  npl-sql-architect.md  npl-tasker-fast.md  npl-tasker-opus.md  npl-tasker-ultra.md  npl-tasker.md  npl-tdd-coder.md  npl-tdd-debugger.md  npl-tdd-tester.md  npl-templater.md  prd-editor.md  tasker-fast.md  tasker-hiauku.md  tasker-opus.md  tasker-sonnet.md  tasker-ultra.md  tdd-coder.md  tdd-debugger.md  tdd-tester.md
commands/: annotate.md  generate-meta-data.md  guest.md  hydrate.md  reflect.md  task-wizard.md  track-assumptions.md  update-arch-doc.md  update-arch-v2.md  update-layout-doc.md  update-layout-v2.md
conventions/: directives.yaml  npl.yaml  prefixes.yaml  prompt-sections.yaml  pumps.yaml  special-sections.yaml
core/: npl-persona.wip.md
demo/: README.md
doc/: README.md
docs/: PROJ-ARCH.md  PROJ-ARCH.summary.md  PROJ-LAYOUT.md  PROJ-LAYOUT.summary.md  PROJ-SCHEMA.md  PROJ-SCHEMA.summary.md  PROJ-STATUS.md  PROJECT-ARCH.md  PROJECT-LAYOUT.md  README.md  features-grid.md  instructional-blocks.md  multi-agent-orchestration.md  npl-load.md  npl-syntax-elements.yaml  orchestration-examples.md  prd.md  prd.summary.md  summary.md  user-stories.md  user-stories.summary.md  winnower-design.md
frontend/: .gitignore  README.md  cypress.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
liquibase/: .gitignore  liquibase.properties.example
mcp-server/: .gitignore  COVERAGE.md  COVERAGE_SUMMARY.txt  FINAL_TEST_SUMMARY.md  HOW-TO-RUN.md  PROJECT_STATUS.md  README.md  TESTING.md  USAGE.md  package-lock.json  package.json  pyproject.toml
mcp-server/docs/: ENHANCEMENTS.md  ISSUES.md  PRD.md
mcp-server/frontend/: .gitignore  next.config.js  next.config.ts  package-lock.json  package.json
mcp-server/frontend/src/app/: layout.tsx  page.tsx
mcp-server/frontend/src/app/tasks/: page.tsx
mcp-server/frontend/src/app/tasks/[queueId]/: page.tsx
mcp-server/frontend/src/app/tasks/[queueId]/task/[taskId]/: page.tsx
mcp-server/frontend/src/components/: Badge.tsx  Button.tsx  Input.tsx
mcp-server/src/npl_mcp/: __init__.py  combined.py  launcher.py  server.py  unified.py
mcp-server/src/npl_mcp/artifacts/: __init__.py  manager.py  reviews.py
mcp-server/src/npl_mcp/browser/: __init__.py  capture.py  report.py
mcp-server/src/npl_mcp/chat/: __init__.py  rooms.py
mcp-server/src/npl_mcp/executors/: __init__.py  fabric.py  manager.py
mcp-server/src/npl_mcp/scripts/: __init__.py  wrapper.py
mcp-server/src/npl_mcp/sessions/: __init__.py  manager.py
mcp-server/src/npl_mcp/storage/: __init__.py  db.py  migrations.py  schema.sql
mcp-server/src/npl_mcp/tasks/: __init__.py  manager.py
mcp-server/src/npl_mcp/web/: __init__.py  app.py
mcp-server/tests/: __init__.py  test_additional.py  test_basic.py  test_browser.py  test_migrations.py  test_sessions.py  test_web.py  test_web_frontend.js
nlp/: nlp-0.3  nlp-0.3.prompt  nlp-0.3.prompt.md  nlp-0.4.prompt.md  nlp-0.5.prompt.md
npl/: agent.md  agent.patch.md  declarations.md  declarations.yaml  directive.md  directives.extended.md  directives.md  directives.yaml  fences.md  npl-full.md  npl.yaml  planning.md  prefix.md  prefixes.yaml  prompt-sections.yaml  pumps.md  pumps.yaml  special-section.md  special-sections.yaml  syntax.yaml
npl-v2/: directives.yaml  fences.yaml  formatting.yaml  instructing.yaml  prefixes.yaml  pumps.yaml  registry.yaml  special-sections.yaml  syntax.yaml
npl_mcp/: server.py
prd/: npl-itemized-list.md
project-management/: personas.md  personas.summary.md  prd.md  prd.summary.md
scripts/: port-forward-litellm.sh
skeleton/: CLAUDE.md
skills/: INDEX.md  README.md
spike-ui-ux/: CONSOLIDATION-GUIDE.md  README.md
src/: mcp.py
sub-agent-prompts/: 01-npl-idea-to-spec.md  02-npl-prd-editor.md  03-prd-refactoring.md  04-consolidate-user-stories.md  CONTINUATION-PROMPT.md  agent-persona-prompt.md  agent-rename-prompt.md  brief-generation-main-prompt.md  brief-generation-prompt.md  consolidate-user-stories.md  fastmcp-summary-prompt.md  merge-user-stories-batch.md  utility-persona-prompt.md  winnower-caller-protocol.md
tests/: conftest.py  test_agents_module.py  test_agents_tools.py  test_artifacts.py  test_asset_filter_nihilism.py  test_catalog_migration.py  test_config.py  test_db.py  test_db_personas.py  test_db_projects.py  test_db_stories.py  test_download.py  test_formatter.py  test_generic_sessions.py  test_heading_filter.py  test_instruction_embeddings.py  test_instructions.py  (+28 more)
tools/: README.md  __init__.py  arize_integration.py  convert_markdown.py  convert_to_markdown.py  git_dump.py  git_tree.py  image_convert-alt.py  image_convert.py  md_view.py  npl.tmLanguage.json  npl_loader.md  npl_loader.py  pyproject.toml  skill_evaluator.py  skill_validator.py  tmp_npl_loader.py  view_markdown.py  view_md.py
tools/lib/: __init__.py  git_helpers.py
tools/npl/: __init__.py  config.py  db.py  formatter.py  refs.py  sync.py  yaml_ops.py
tools/validators/: __init__.py  eval_validator.py  fine_tune_validator.py  multi_shot_validator.py  prompts_validator.py  skill_md_validator.py  structure_validator.py
wip/: .gitignore  pyproject.toml
wip/commands/: update-schema-doc.md
wip/conventions/: declarations.yaml  syntax.yaml
wip/docs/reference/: SKILL-GUIDELINE.md  SKILL-QUICKSTART.md
wip/docs/reference/fastmcp/: 06-context.md
wip/src/npl_mcp/: convention_formatter.py  server.py
wip/src/npl_mcp/meta_tools/: __init__.py  catalog.py  search.py  summary.py
(+2582 files in other folders)
