[project]
name = "noizu-prompt-lingua"
version = "0.1.0"
description = "Noizu Prompt Lingua - NPL framework with MCP server and CLI tools"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.25.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
npl-loader = "tools.npl_loader:main"

[tool.setuptools]
packages = ["npl_mcp", "tools"]
py-modules = []

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
