[project]
name = "npl-mcp"
version = "0.2.0"
description = "NPL MCP Server with artifact management, persona chat system, and web interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npl_mcp"]

[project.scripts]
npl-mcp = "npl_mcp.server:main"
npl-mcp-web = "npl_mcp.combined:main"
npl-mcp-unified = "npl_mcp.unified:main"
npl-mcp-launcher = "npl_mcp.launcher:main"
