[project]
name = "npl-mcp"
version = "0.1.0"
description = "NPL MCP service"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.0",
    "watchfiles>=1.1.1",
]

[project.scripts]
npl-mcp = "npl_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npl_mcp"]
